--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
         <div class="baixo">
             <a href="./cultura.html">Cultura</a>
             <a href="./pontos.html">Pontos Turísticos</a>
-            <a href="">Culinaria</a>
-            <a href="">Economia</a>
+            <a href="./culinaria.html">Culinaria</a>
+            <a href="./economia.html">Economia</a>
             <a href="">Quiz</a>
         </div>
     </header>
