--- a/economia.html
+++ b/economia.html
@@ -20,7 +20,7 @@
             <a href="./pontos.html">Pontos Turísticos</a>
             <a href="./cultura.html">Cultura</a>
             <a href="./culinaria.html">Culinaria</a>
-            <a href="">Quiz</a>
+            <a href="./quiz.html">Quiz</a>
         </div>
     </header>
     <h2>Economia</h2>
