--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <a href="./pontos.html">Pontos Turísticos</a>
             <a href="./culinaria.html">Culinaria</a>
             <a href="./economia.html">Economia</a>
-            <a href="">Quiz</a>
+            <a href="./quiz.html">Quiz</a>
         </div>
     </header>
     <main>
