--- a/pontos.html
+++ b/pontos.html
@@ -18,9 +18,9 @@
         <div class="baixo">
             <a href="./home.html">Home</a>
             <a href="./cultura.html">Cultura</a>
-            <a href="">Culinaria</a>
-            <a href="">Economia</a>
-            <a href="">Quiz</a>
+            <a href="./culinaria.html">Culinaria</a>
+            <a href="./economia.html">Economia</a>
+            <a href="./quiz.html">Quiz</a>
         </div>
     </header>
     <main>
